<resources>
    <string name="app_name">Fussy Vegan Pro</string>
    <string name="title_scan">Scan</string>
    <string name="title_search">Search</string>
    <string name="title_fastfood">Fast Food</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_setting">More</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="product_information">MORE INFORMATION</string>
    <string name="tv_search_all">Search All</string>
    <string name="tv_guide">Vegan Fast Food Guide</string>
    <string name="tv_browse_food_chain">Browse Food Chain</string>
    <string name="tv_choose_search_option">Choose Search Option</string>

    <!-- Filter Search -->
    <string name="txt_filter_options">Filter Options</string>
    <string name="txt_clear_filter_search">Clear</string>
    <string name="txt_apply_filter_search">Apply</string>
    <string name="txt_filter_search_no_palm">No Palm Oil</string>
    <string name="txt_filter_search_gluten_free">Gluten Free</string>
    <string name="txt_filter_search_nut_free">Nut Free</string>
    <string name="txt_filter_search_soy_free">Soy Free</string>
    <string name="txt_filter_search_vegan_company">Vegan</string>

    <!-- Login -->
    <string name="txt_login">LOGIN</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_login_lowcase">Login</string>
    <string name="txt_forgot_pass">Forgot your password?</string>
    <string name="txt_register_switch">Tap here to register</string>
    <string name="txt_register">Register</string>
    <string name="txt_name">Name</string>
    <string name="txt_confirm_password">Type password again</string>
    <string name="txt_forgot_pass_title">Forgot Password</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_write_review">Write a review</string>
    <string name="txt_name_optional">Name (Optional)</string>
    <string name="txt_title">Title</string>
    <string name="txt_reviewe">Review</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_rating_and_review">Rating and Reviews</string>
    <string name="txt_changepass">CHANGE PASSWORD</string>
    <string name="txt_oldpass">Old password</string>
    <string name="txt_newpass">New password</string>
    <string name="txt_confirm_newpass">Confirm new password</string>
    <string name="message_wrong_length_papss">Password must be longer than 6 characters</string>
    <string name="message_wrong_confirm_pass">New password must be the same</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_travel">Travel</string>
    <string name="txt_vegan_restaurant">Vegan Restaurants</string>
    <string name="txt_choose_country">CHOOSE COUNTRY</string>
    <string name="txt_title_city">MAJOR CITIES AND REGIONS</string>
    <string name="tv_detail">Details</string>
    <string name="tv_map">Map</string>
    <string name="tv_review">Rating and Reviews</string>

    <string-array name="AUS_cities">
        <item>Adelaide</item>
        <item>Brisbane</item>
        <item>Canberra</item>
        <item>Gold Coast</item>
        <item>Melbourne</item>
        <item>Perth</item>
        <item>Sunshine Coast</item>
        <item>Sydney</item>
    </string-array>

    <string-array name="AUS_cities_des">
        <item>South Australia</item>
        <item>Queensland</item>
        <item>Australia Capital Territory</item>
        <item>Queensland</item>
        <item>Victoria</item>
        <item>Western Australia</item>
        <item>Queensland</item>
        <item>New South Wales</item>
    </string-array>

    <string-array name="NEW_cities">
        <item>Auckland</item>
        <item>ChristChurch</item>
        <item>Wellington</item>
    </string-array>
    <string name="choose_airline">CHOOSE AIRLINE</string>
    <string name="vegan_option">Vegan Option</string>
    <string name="last_updated">Last updated</string>
    <string name="major_airports">MAJOR AIRPORTS</string>
    <string name="australian_capital_territory">AUSTRALIAN CAPITAL TERRITORY</string>
    <string name="new_south_wales">NEW SOUTH WALES</string>
    <string name="norfolk_island">NORFOLK ISLAND</string>
    <string name="northern_territory">NORTHERN TERRITORY</string>
    <string name="queensland">QUEENSLAND</string>
    <string name="south_australia">SOUTH AUSTRALIA</string>
    <string name="tasmania">TASMANIA</string>
    <string name="victoria">VICTORIA</string>
    <string name="western_australia">WESTERN AUSTRALIA</string>
    <string name="location_information">location information</string>
    <string name="details">Details</string>
    <string name="map">Map</string>
    <string name="todo">TODO</string>
    <string name="tv_no_gps">Cannot search your location</string>
    <string name="tv_text_ok">Ok</string>
    <string name="textView_message_gps_settings">Please Enter GPS</string>
    <string name="textView_cancel_gps_settings">Cancel</string>

    <string-array name="NEW_cities_des">
        <item>New Zealand</item>
        <item>New Zealand</item>
        <item>New Zealand</item>
    </string-array>

    <string-array name="Cuisine_Type">
        <item>African</item>
        <item>Brazilian</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Desserts</item>
        <item>European</item>
        <item>Fast Food</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Malaysian</item>
        <item>Mediterranian</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Nepalese</item>
        <item>Pizza</item>
        <item>Thai</item>
        <item>Turkey</item>
        <item>Vietnamese</item>
        <item>Western</item>
    </string-array>

</resources>
