<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan_96"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_96"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_advanced"
        android:icon="@drawable/ic_advanced_96"
        android:title="Advanced" />

    <item
        android:id="@+id/navigation_fastfood"
        android:icon="@drawable/ic_fastfood_96"
        android:title="@string/title_fastfood" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting_96"
        android:title="@string/title_setting" />

</menu>
