<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fussyvegan.scanner.activity.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/forgotPassImg_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/arlrdbd"
            android:text="PRO"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_forgot_pass_title"
            android:textColor="@color/black"
            android:textSize="@dimen/edt_text"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/forgotPassEdt_Email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:hint="@string/txt_email"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@drawable/bg_login_edittext_background"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"/>

        <Button
            android:id="@+id/forgotPassBtn_Reset"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:text="@string/txt_confirm"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:background="@drawable/bg_login_btn_login"/>
    </LinearLayout>

</LinearLayout>
