<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNameCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Australia"
        android:textColor="#000"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlSearchAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search_chain" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imgSearch"
                android:text="@string/tv_search_all"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:src="@drawable/ic_search_24" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorManvegan" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">


            <ImageView
                android:id="@+id/imgGuide"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_guide_fastfood" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imgGuide"
                android:text="@string/tv_guide"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_search_24"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_browse_food_chain"
        android:textAllCaps="true"
        android:textColor="#000" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcNameChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />


</LinearLayout>